public/a/c/screen.css
/* ... */
.blog .share-trigger {
  text-decoration: none;
  color: #cecece; }
  .blog .share-trigger:hover, .blog .share-trigger:focus {
    color: #6e6e6e; }
.blog .sub {
  max-height: 3200px;
  overflow-y: scroll;
  margin-bottom: 40px; }
.blog article p {
  line-height: 1.5; }
@media (max-width: 850px) {
  .blog img {
    height: auto; } }

.pager {
  display: none;
  cursor: pointer;
  padding: 14px;
  background: rgba(0, 0, 0, 0.1);
  position: fixed;
  z-index: 999;
  right: 0;
  color: #fff; }
  @media screen and (max-width: 767px) {
    .pager {
      padding: 5px; } }
  .pager.prev {
    left: 0;
    right: inherit;
    z-index: 999; }
  .social-footer .pager {
    position: absolute;
    top: 200px; }
  .pager:hover, .pager:focus {
    color: #939392; }

.carousel-wrap {
  position: relative; }

.image-pager {
  cursor: pointer;
  position: absolute;
  top: 33%;
  color: #939392; }

.next-cs {
  right: 0; }

.prev-cs {
  left: 0; }

html .insta-panel {
  display: none; }

/*-------------------------------------------

   	 Blog Landing

-------------------------------------------*/
.single .col, .single .grid-block {
  padding: 28px;
  position: relative; }
  .single .col h1, .single .grid-block h1 {
    margin-bottom: 7px; }

article .figcaption {
  font-weight: bold;
  font-style: italic;
  color: #cecece; }

/*-------------------------------------------

   	 Case Study

-------------------------------------------*/
.case-study .col:not(.first) h2, .case-study .grid-block:not(.first) h2 {
  margin-bottom: 0; }
.case-study .col:not(.first) p:not(.who), .case-study .grid-block:not(.first) p:not(.who) {
  margin-bottom: 28px; }
.case-study .col, .case-study .grid-block {
  margin-bottom: 56px; }
.case-study .meta-header {
  text-align: center;
  display: block;
  margin-bottom: 0; }
.case-study .capabilities {
  padding: 0; }
@media (max-width: 700px) {
  .case-study .split3_1-2 {
    margin-bottom: 110px; }
    .case-study .split3_1-2 .col, .case-study .split3_1-2 .grid-block {
      width: 100%;
      margin-right: 0; }
    .case-study .split3_1-2 .module {
      overflow: hidden; }
  .case-study .capabilities ul {
    margin-bottom: 20px;
    float: left;
    margin-right: 25px;
    padding-bottom: 0; }
  .case-study .capabilities p {
    float: left;
    width: 60%; }
  .case-study .capabilities .btn-alt {
    position: absolute;
    bottom: 30px;
    width: 90%;
    padding: 0; } }

/*-------------------------------------------

   	Work Detail

-------------------------------------------*/
.work-detail iframe {
  min-height: 400px; }
.work-detail img {
  max-height: 95%; }
.work-detail .first.col h1, .work-detail .first.grid-block h1 {
  margin-bottom: 14px; }
.work-detail .first.col .meta, .work-detail .first.grid-block .meta {
  line-height: 1.2; }
.work-detail .first.col .meta-alt, .work-detail .first.grid-block .meta-alt {
  padding-top: 42px;
  position: relative; }
  .work-detail .first.col .meta-alt:before, .work-detail .first.grid-block .meta-alt:before {
    content: "____";
    position: absolute;
    top: 0;
    left: 0;
    color: #939392;
    letter-spacing: 0; }
@media (max-width: 767px) {
  .work-detail .split3_1-2 .col, .work-detail .split3_1-2 .grid-block {
    width: 100%;
    margin-right: 0; }
    .work-detail .split3_1-2 .col.first, .work-detail .split3_1-2 .first.grid-block {
      margin-bottom: 28px; }
  .work-detail img {
    margin: 0 auto 28px; } }

.fb-like {
  display: none !important; }

section.page {
  min-height: 1500px;
  margin-top: 30px; }

@media (max-width: 700px) {
  section.page {
    min-height: 500px; } }
section.page div.loading {
  margin-left: auto;
  margin-right: auto;
  width: 32px;
  margin-top: 15%; }

.royalSlider img {
  height: auto; }

/*-------------------------------------------

   	 Header
-------------------------------------------*/
header {
  background: url(../i/bg-header-alt.png) repeat-x 0 bottom;
  overflow: hidden;
  position: relative;
  z-index: 10; }
  .work-landing header, .work-detail header {
    margin-bottom: 56px; }
    @media (max-width: 700px) {
      .work-landing header, .work-detail header {
        margin-bottom: 20px; } }
  header .inner-wrap {
    padding-top: 33px;
    background: #fff;
    margin-bottom: 19px; }
  @media (max-width: 768px) {
    header {
      margin-bottom: 20px;
      display: none;
      position: fixed;
      width: 100%;
      z-index: 999; } }

@media (max-width: 768px) {
  header .wrap {
    padding: 0; } }
.header-inner-wrapper.top {
  top: 0 !important; }
.header-inner-wrapper.fixed {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100; }
.header-inner-wrapper .top.fixed {
  height: auto !important; }

@media (max-width: 400px) {
  .header-inner-wrapper.fixed, .header-inner-wrapper {
    position: relative;
    top: 0 !important; } }
@media (max-width: 400px) {
  .header-inner-wrapper.fixed, .header-inner-wrapper {
    position: relative;
    top: 0 !important; } }
.search-wrap {
  margin-top: 121px; }

.search-wrap.case-studies {
  margin-top: 0; }

.search-wrap.blog {
  margin-top: 0; }

.search-wrap.about {
  margin-top: 45px; }

.search-wrap.work, .search-wrap.detail {
  margin-top: 165px; }
  .search-wrap.work .image-loading:last-child img, .search-wrap.detail .image-loading:last-child img {
    margin-bottom: 0; }

@media (max-width: 768px) {
  .search-wrap {
    margin-top: 0px; }

  .search-wrap.case-studies {
    margin-top: 20px; }

  .search-wrap.blog {
    margin-top: 20px; }

  .search-wrap.about {
    margin-top: 75px; }

  .search-wrap.work, .search-wrap.detail {
    margin-top: 15px; } }
@media (min-width: 768px) and (max-width: 979px) {
  .search-wrap {
    margin-top: 155px; } }
@media (max-width: 400px) {
  .search-wrap {
    margin-top: -35px; } }
#search-modal {
  display: none; }

.hover-trigger {
  position: fixed;
  padding-left: 10px;
  width: 100%;
  display: none;
  background: rgba(59, 59, 59, 0.8);
  top: 0;
  z-index: 99; }
/* ... */

